--- a/style.css
+++ b/style.css
@@ -176,8 +176,8 @@ section.especialidades .titulo {
   padding: 40px;
   margin-top: 45px;
   border: 1px solid rgba(255, 255, 255, 0.034);
-  width: 265px;
-  height: 230px;
+  width: 180px;
+  height: 180px;
   border-radius: 10px;
   background-color: rgba(92, 92, 92, 0.3215686275);
   transition: 0.2s;
@@ -216,8 +216,8 @@ section.especialidade .flex {
   padding: 40px;
   margin-top: -50px;
   border: 1px solid rgba(255, 255, 255, 0.034);
-  width: 265px;
-  height: 230px;
+  width: 180px;
+  height: 180px;
   border-radius: 10px;
   background-color: rgba(92, 92, 92, 0.3215686275);
   transition: 0.2s;
@@ -237,6 +237,149 @@ section.especialidade .flex {
   font-size: 22px;
   margin: 15px 0;
 }
+
+/* INICIO ESTILIZAÇÃO CARROSSEL PORTFOLIO */
+.titulo-desktop {
+  color: white;
+  font-size: 35px;
+  text-align: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 60px;
+}
+
+.titulo-desktop span {
+  color: #a58806;
+}
+
+.swiper {
+  width: 1100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  width: 80%; 
+  margin: 0 auto;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 450px;
+  margin-bottom: 20px;
+  align-items: center;
+  text-align: center;
+  background-color: rgb(0, 0, 0);
+  box-shadow: 0 0 17px rgba(192, 192, 192, 0.753);
+  border-radius: 20px;
+  flex: 0 0 30%; 
+  min-width: 250px; 
+}
+
+.swiper-slide img {
+  display: block;
+  width: 300px;
+  height: 200px;
+  border-radius: 20px 20px 0px 0px;
+  max-width: 100%;
+  height: auto;
+}
+
+.swiper-slide h4 {
+  text-align: center;
+  font-size: 20;
+  font-weight: 600px;
+  padding-top: 15px;
+  padding-bottom: 10px;
+}
+
+.swiper-slide p {
+  text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-weight: 700px;
+}
+
+.botao-ver-todos {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+.botao-ver-todos a {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.botao-ver-todos button {
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin-top: 20px;
+  width: 230px;
+  height: 40px;
+  border-radius: 7px;
+  cursor: pointer;
+  background-color: #a58806;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600px;
+  border: none;
+  margin-bottom: 20px;
+}
+
+.botao-ver-todos button:hover {
+  transform: scale(1.08);
+  box-shadow: 0 0 17px rgba(255, 255, 255, 0.753);
+}
+
+.botao-github {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.swiper-slide a {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.swiper-slide a button {
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin-top: 20px;
+  width: 105px;
+  height: 35px;
+  border-radius: 7px;
+  cursor: pointer;
+  background-color: #a58806;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600px;
+  border: none;
+}
+
+button:hover {
+  transform: scale(1.08);
+  box-shadow: 0 0 17px rgb(255, 255, 255);
+}
+
+.swiper-pagination-bullet {
+  background: white;
+  height: 15px;
+  width: 15px;
+  border-radius: 25px;
+}
+
+.paragrafo-carrossel, .titulo-carrossel {
+  color: #fff;
+}
+/* FIM ESTILIZAÇÃO CARROSSEL PORTFOLIO */
 
 /* estilo do sobre*/
 section.sobre {
@@ -473,5 +616,18 @@ footer {
 
   footer {
     max-width: 90vw;
+  }
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .swiper-slide {
+    flex: 0 0 50%;
+  }
+}
+
+@media (max-width: 576px) {
+  .swiper-slide {
+    flex: 0 0 100%;
   }
 }
